# growth-chat-ai

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: create-adr.md  create-trd.md
.claude/rules/: create-adr.md
.github/workflows/: deploy-backend.yml  deploy-documentation.yml  deploy-frontend.yml  e2e.yml  eval-behaviour.yml  eval-rag.yml  eval-redteam.yml  ingest-knowledge.yml  load-test.yml
backend/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/src/backend/: config.py  limiter.py  main.py
backend/src/backend/analytics/: __init__.py  events.py  langfuse_client.py  langfuse_provider.py  provider.py
backend/src/backend/conversation/: graph.py  models.py  prompt.py  router.py
backend/src/backend/conversation/graph/: builder.py  messages.py  postprocessing.py  routing.py
backend/src/backend/conversation/graph/nodes/: generate_response.py  propose_handoff.py  update_state.py  write_state.py
backend/src/backend/conversation/prompt/: __init__.py  builder.py  layers.py  stage3.py  state.py
backend/src/backend/handoff/: business_hours.py  context_packet.py  crm.py  delivery.py  email_fallback.py  models.py  record.py  slack.py
backend/src/backend/knowledge/: retrieval.py
backend/src/backend/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama_client.py
backend/src/backend/qualification/: models.py
backend/tests/: conftest.py  test_analytics_provider.py  test_business_hours.py  test_chat_validation.py  test_config.py  test_cors.py  test_functional_validation.py  test_graph.py  test_handoff_context_packet.py  test_handoff_crm.py  test_handoff_delivery.py  test_handoff_slack.py  test_limiter.py  test_ready.py  test_retrieval.py
backend/tests/acceptance/: conftest.py  test_handoff_e2e.py  test_scaffold.py
backend/tests/load/: load-test.js  messages.js
data/database/: .env.example  README.md  pyproject.toml
data/database/migrations/: 0002_knowledge_chunks.down.sql  0002_knowledge_chunks.sql  0003_knowledge_chunks_dev.down.sql  0003_knowledge_chunks_dev.sql  0004_handoff_records.down.sql  0004_handoff_records.sql  0005_leads.down.sql  0005_leads.sql  0006_knowledge_chunks_metadata.down.sql  0006_knowledge_chunks_metadata.sql  0007_leads_add_warm_lead.down.sql  0007_leads_add_warm_lead.sql
data/database/seeds/: dev_seed.sql
data/ingestion/: .env.example  README.md  pyproject.toml
data/ingestion/src/ingestion/: chunker.py  embedder.py  pipeline.py
data/knowledge-base/case-studies/: case-study-compliance-risks-ai.md  case-study-getvisibility-ai-security.md  case-study-kaluza-ev-charging.md
data/knowledge-base/engagement/: engagement-model-end-to-end.md  engagement-model-team-extension.md
data/knowledge-base/faq/: faq-existing-clients.md  faq-how-we-work.md  faq-pricing-timelines.md  faq-what-we-dont-do.md
data/knowledge-base/services/: service-ai-agents.md  service-ai-development.md  service-ai-transformation.md  service-software-engineering.md
data/knowledge-base/team/: team-locations-timezone.md  team-profile.md
documentation/: .gitignore  docmd.config.js  package-lock.json  package.json
documentation/docs/: action-plan.md  chat-orchestrator-diagram.md  conversation-design-document.md  cost-report.md  discovery-artifact.md  evaluation-best-practices.md  index.md  problem-statement.md  product-requirements-document.md  project-statement.md
documentation/docs/architecture-decisions/: ADR-001-llm-provider.md  ADR-002-conversation-orchestrator.md  ADR-003-use-pgvector-and-openai-embeddings-for-knowledge-retrieval.md  ADR-004-use-memorysaver-and-postgres-for-state-persistence.md  ADR-005-use-chat-widget.md  ADR-006-use-flyio-neon-cloudflare.md  ADR-007-use-langfuse-for-llm-observability.md  ADR-008-use-betterstack-for-application-logging.md  ADR-009-use-postgres-leads-table-as-crm-substitute.md  index.md
documentation/docs/considerations/: chat-behaviour.md  human-handoff.md  index.md  qualification-signals.md
documentation/docs/operations/: index.md  ops-backend.md  ops-database.md  ops-documentation.md  ops-evaluation.md  ops-frontend.md  ops-ingestion.md  ops-observability.md
documentation/docs/product-requirements/: engineering-review.md  index.md  stakeholder-review.md
documentation/docs/technical-requirements/: index.md  trd-api-specification.md  trd-data-model.md  (+7 more)
evaluation/: .env.example  .gitignore  README.md  calibrate_rag.py  conftest.py  judge.py  pyproject.toml
evaluation/behaviour/: conftest.py  test_adversarial.py  test_n1_competitor.py  test_n2_researcher.py  test_p1_cto.py  test_p2_founder.py  test_p3_referred.py  test_patterns.py
evaluation/behaviour/metrics/: custom_metrics.py  follow_up_commitment.py  honest_limit_acknowledgement.py  no_apology_tone.py  no_contact_request.py  no_cost_figure.py  no_fabrication_without_context.py  no_further_qualification.py  no_pricing_disclosure.py  pricing_deflection_quality.py  single_question_per_exchange.py  stage3_proposal.py  technical_depth.py
evaluation/datasets/: rag_eval_dataset.json
evaluation/rag/: __init__.py  evaluators.py  generator.py  langfuse_tracker.py  loader.py  ragas_compat.py  reporting.py  retriever.py  runner.py
evaluation/redteam/: langfuse_exporter.py  promptfooconfig.yaml
evaluation/redteam/plugins/: client-name-extraction.yaml  disqualification-bypass.yml  pricing-extraction.yaml  system-prompt-extraction.yaml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  test-page.html  vite.config.ts
frontend/demo/: index.html
frontend/e2e/: chat.spec.ts
frontend/src/: GrowthChat.test.ts  GrowthChat.ts  main.ts
knowledge_ingest/: main.py  pyproject.toml
shared/: README.md
shared/knowledge_base/: .gitignore  README.md  pyproject.toml
shared/knowledge_base/src/knowledge_base/: __init__.py  embeddings.py
shared/telemetry/: README.md  pyproject.toml
shared/telemetry/src/telemetry/: __init__.py  _formatter.py  _logger.py  events.py
shared/telemetry/tests/: test_formatter.py
(+21 files in other folders)
