[project]
name = "backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tzdata>=2026.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.2.0",
    "anthropic>=0.104.1",
    "openai>=2.38.0",
    "ollama>=0.6.2",
    "slowapi>=0.1.9",
    "langfuse>=4.0",
    "langchain>=0.3.0",
    "knowledge-base",
    "telemetry",
]

[tool.uv.sources]
knowledge-base = { workspace = true }
telemetry = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
    "knowledge-base[huggingface]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
