[project]
name = "evaluation"
version = "0.1.0"
description = "Evaluation suite: DeepEval behaviour tests, promptfoo red team, RAGAS RAG pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "deepeval>=4.0.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-html>=4.2.0",           # HTML reports for behaviour test runs
    "langfuse>=4.7.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    # ── LLM-as-judge providers ────────────────────────────────────────────────
    "ollama>=0.6.2",                # direct Ollama client used in judge.py
    "langchain-core>=1.4.0",        # shared base for LangChain judge wrappers
    "langchain-anthropic>=1.4.3",   # JUDGE_PROVIDER=anthropic (DeepEval AnthropicModel)
    "langchain-ollama>=1.1.0",      # JUDGE_PROVIDER=ollama (local dev)
    # ── RAG retrieval infrastructure (always needed by retriever.py) ──────────
    "sentence-transformers>=5.5.1", # dev embeddings: all-MiniLM-L6-v2 (384-dim)
    "psycopg[binary]>=3.3.4",       # direct pgvector access
]

[project.optional-dependencies]
# ragas>=0.4.x may still pull scikit-network on some platforms.
# If install fails on Windows with Python 3.14, run on Linux/WSL or use CI.
# Install with: uv sync --package evaluation --extra ragas
ragas = [
    "ragas>=0.4.3",
]

[tool.pytest.ini_options]
testpaths = ["behaviour"]
asyncio_mode = "auto"
markers = [
    "p1: Evaluating CTO persona",
    "p2: Exploring Founder persona",
    "p3: Referred Decision-Maker persona",
    "n1: Competitor persona",
    "n2: Curious Researcher persona",
    "pattern: Specific conversation pattern",
    "adversarial: Adversarial probes — extraction, injection, persona boundary, and logic bypass",
    "phase2: Phase 2 first eval cycle scope",
]
