[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
