[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.1.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "psycopg[binary]>=3.2.0",
    "sentence-transformers>=5.0.0",
    "openai>=2.0.0",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
