[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.1.0",
    "langchain>=1.3.1",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "psycopg[binary]>=3.2.0",
    "openai>=2.0.0",
    "knowledge-base",
]

[dependency-groups]
dev = [
    "knowledge-base[huggingface]",
]

[tool.uv.sources]
knowledge-base = { workspace = true }

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
