[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guille", email = "g.granado.g@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "langchain-core>=1.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "sentence-transformers>=5.5.1",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
