[project]
name = "telemetry"
version = "0.1.0"
description = "Structured JSON logger for growth-chat"
readme = "README.md"
authors = [
    { name = "Guille", email = "g.granado.g@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
